Fix disappearing arrow SVG in home page on small screen sizes shrink divider on home page in mobile breakpoint

--- a/src/components/HomePage/HomePage.scss
+++ b/src/components/HomePage/HomePage.scss
@@ -66,6 +66,10 @@
     margin-bottom: 40px;
     margin-top: 32px;
     width: 355px;
+
+    @include mobileWidth-lg {
+      width: 230px;
+    }
   }
 
   &__subtitle {
